wrapping fixed

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -14,7 +14,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: wrap;
+    flex-wrap: wrap;
     margin-top: 2rem;
     gap: 1rem;
 }
